# SIMULATIONS

./: LICENSE  README.md  README.md.plist
PHQ404_devoirs/3-schrodinger/: devoir3_phq404.tex
PHQ404_devoirs/4-ising/: README.md  devoir4_phq404.tex  pyproject.toml
PHQ404_devoirs/4-ising/ising/: ising.py  main.py  simulate.py
PHQ404_devoirs/4-ising/ising/data/: energy.txt  magnetization.txt  temps_correlation.txt
PHQ404_devoirs/4-ising/tests/: test_4_ising.py
attractors/: .gitignore  pyproject.toml
attractors/attractors/: attractor.py  bouali.py  lorenz.py  main.py  rossler.py  solvers.py  useful_funcs.py
attractors/attractors/figs/trajectories/: traj_bouali.png.plist  traj_lorenz.png.plist
attractors/chaos_attractors_revtex/: main.bbl  main.tex  preamble.sty  refs.bib
attractors/chaos_attractors_revtex/sections/: appendix1.tex  appendix2.tex  conclusion.tex  introduction.tex  resultats.tex  theory.tex
attractors/test_rapport/chaos_attractors/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  preamble.sty
attractors/test_rapport/chaos_attractors/sections/: appendix1.tex  appendix2.tex  conclusion.tex  introduction.tex  method.tex  resultats.tex  theory.tex
chaos_attractors_beamer/: main.bbl  main.nav  main.run.xml  main.tex  note.txt  preamble.sty  refs.bib
chaos_attractors_beamer/sections/: conclusion.tex  context.tex  method.tex
