[tool.poetry]
name = "attractors"
version = "0.1.0"
description = ""
authors = ["BCarnaval <antoinedelagrave@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
rich = "^13.3.2"
imageio = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
