[tool.poetry]
name = "ising"
version = "0.1.0"
description = ""
authors = ["BCarnaval <antoinedelagrave@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.0"
numpy = "^1.23.1"
matplotlib = "^3.7.1"
numba = "^0.56.4"
rich = "^13.3.3"
snakeviz = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
